tests/typecheck/good/str-nonprint-char-1.scilexp
let s = "\\ \/ \b \f \n \r \t \" " in
s
