tests/typecheck/bad/str-bad-char-1.scilexp
let s1 = "abcd\00" in
s1

